changed to virtual monitor thread